syntax = "proto3";

package services.user;

option go_package = "services/user";

import "google/protobuf/timestamp.proto";

service User {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  rpc QueryUsers(QueryUsersRequest) returns (QueryUsersResponse);
}

message CreateUserRequest {
  string email = 1;
  string first_name = 2;
  string last_name = 3;
  string nickname = 4;
  string password = 5;
  string country = 6;
}

message CreateUserResponse {
  string user_id = 1;
}

message UpdateUserRequest {
  string user_id = 1;

  message Fields {
    string email = 1;
    string first_name = 2;
    string last_name = 3;
    string nickname = 4;
    string password = 5;
    string country = 6;
  }

  Fields fields = 2;
}

message UpdateUserResponse {
  bool success = 1;
}

message DeleteUserRequest {
  string user_id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

message QueryUsersRequest {
  uint64 page_number = 1;
  uint64 page_size = 2;

  message Filter {
    string country = 1;
    string nickname = 2;
    string email = 3;
  }

  Filter filter = 3;
}

message QueryUsersResponse {
  repeated UserInfo users = 1;
}

message UserInfo {
  string id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  string nickname = 5;
  string country = 6;
  string password = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp update_at = 9;
}
